# roco

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  package.xml
catkin_create_roco_pkg/: catkin_create_roco_pkg
catkin_create_roco_pkg/roco_pkg_template/: CMakeLists.txt  package.xml  rocoma_plugin.xml
catkin_create_roco_pkg/roco_pkg_template/include/roco_pkg_template/: Template.h  Template.hpp
catkin_create_roco_pkg/roco_pkg_template/src/: Template.cpp  roco_pkg_template_plugin.cpp
example/: CMakeLists.txt
example/include/: ControllerAdapter.hpp  ControllerAdapterExample.hpp  ControllerExample.hpp  ControllerTest.hpp
example/src/: ControllerExample.cpp  ControllerTest.cpp  example_main.cpp
include/robotControllers/common/: ControllerImpl.hpp  ControllerInterface.hpp
include/robotControllers/time/: Time.hpp  TimeStd.hpp
include/roco/: roco.hpp
include/roco/common/: log_messages.hpp
include/roco/controllers/: Controller.hpp  Controller.tpp  ControllerAdapteeInterface.hpp  ControllerAdapterInterface.hpp  ControllerBase.hpp  ControllerBase.tpp  ControllerExtensionInterface.hpp  ControllerInterface.hpp  ControllerRos.hpp  ControllerRosInterface.hpp  FailproofController.hpp  LocomotionController.hpp  LocomotionControllerInterface.hpp  controllers.hpp
include/roco/controllers/adaptees/: ControllerAdapteeInterface.hpp  EmergencyControllerAdapteeInterface.hpp  FailproofControllerAdapteeInterface.hpp
include/roco/controllers/adapters/: ControllerAdapterInterface.hpp  EmergencyControllerAdapterInterface.hpp  FailproofControllerAdapterInterface.hpp
include/roco/log/: log_backend.hpp  log_messages.hpp  log_messages_backend.hpp  log_messages_ros.hpp  log_messages_std.hpp
include/roco/model/: StateInterface.hpp
include/roco/time/: Time.hpp  TimeEvent.hpp  TimeStd.hpp
include/roco/workers/: Worker.hpp  WorkerEvent.hpp  WorkerHandle.hpp  WorkerInterface.hpp  WorkerOptions.hpp
roco/: CMakeLists.txt  package.xml
roco/include/roco/: roco.hpp
roco/include/roco/common/: assert_macros.hpp
roco/include/roco/controllers/: Controller.hpp  ControllerBase.hpp  ControllerBase.tpp  ControllerExtensionInterface.hpp  ControllerStateInterface.hpp  ControllerSwapStateDummy.hpp  ControllerSwapStateInterface.hpp  ControllerTuple.hpp  ControllerTupleBase.hpp  ControllerTupleSwapState.hpp  FailproofController.hpp  SharedModule.hpp  SharedModuleInterface.hpp  controllers.hpp
roco/include/roco/controllers/adaptees/: ControllerAdapteeInterface.hpp  EmergencyControllerAdapteeInterface.hpp  FailproofControllerAdapteeInterface.hpp
roco/include/roco/controllers/adapters/: ControllerAdapterInterface.hpp  EmergencyControllerAdapterInterface.hpp  FailproofControllerAdapterInterface.hpp
roco/include/roco/model/: CommandInterface.hpp  StateInterface.hpp
roco/include/roco/time/: Time.hpp  TimeStd.hpp
roco/include/roco/workers/: Worker.hpp  WorkerEvent.hpp  WorkerEventInterface.hpp  WorkerEventStd.hpp  WorkerHandle.hpp  WorkerInterface.hpp  WorkerOptions.hpp
roco/src/time/: Time.cpp  TimeStd.cpp
roco/src/workers/: Worker.cpp
roco/test/: ControllerExample.cpp  ControllerTest.cpp  test_main.cpp
roco/test/include/: ControllerAdapterExample.hpp  ControllerExample.hpp
roco_ros/: CMakeLists.txt  Readme.md  package.xml
roco_ros/include/roco_ros/controllers/: ControllerRos.hpp  ControllerTupleRos.hpp  SharedModuleRos.hpp  controllers.hpp
src/common/: CMakeLists.txt  ControllerImpl.cpp
src/controllers/: CMakeLists.txt  Controller.cpp  ControllerAdapterInterface.cpp
src/time/: CMakeLists.txt  Time.cpp  TimeStd.cpp
src/workers/: Worker.cpp
