<?xml version="1.0"?>
<package format="2">
  <name>roco_ros</name>
  <version>0.3.0</version>
  <description>ROS wrapper for roco.</description>

  <license>BSD</license>
  <maintainer email="avijayan@anybotics.com">Aravind Vijayan</maintainer>
  <maintainer email="fgiraldez@anybotics.com">Francisco Giráldez Gámez</maintainer>
  <author email="cgehring@anybotics.com">Christian Gehring</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_clang_tools</build_depend>

  <depend>message_logger</depend>
  <depend>roco</depend>
  <depend>roscpp</depend>

</package>
