<?xml version="1.0" encoding="UTF-8"?>
<package format="2">

  <name>${pkg_name}</name>
  <version>0.1.2</version>
  <description>${pkg_name} provides a robot controller that ...</description>
  <maintainer email="${email}">${author}</maintainer>
  <license>TODO</license>
  <author email="${email}">${author}</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roco</depend>${dependencies_xml}${plugin_export}

</package>
